[YLI-182]: Fixed alerts on mobile.

--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -370,11 +370,6 @@ body.toolbar-fixed.toolbar-horizontal.toolbar-tray-open.tiny-header .viewport .t
 .viewport.expanded-mobile #main {
   margin-left: 100%;
 }
-@media (max-width: 47.9375em) {
-  .viewport #main {
-    margin-top: 52px;
-  }
-}
 
 header#page-head {
   width: 100%;
@@ -1432,11 +1427,6 @@ article.site-alert ul li div {
 .path-frontpage #block-tabs {
   margin-top: 60px;
 }
-@media (min-width: 62em) {
-  .path-frontpage #banner {
-    margin-top: -62px;
-  }
-}
 .path-frontpage .masthead {
   position: relative;
   z-index: 99;
@@ -1447,11 +1437,6 @@ article.site-alert ul li div {
   -o-transition: top 0.2s ease;
   transition: top 0.2s ease;
   background: #0060af;
-}
-@media (min-width: 0) and (max-width: 62em) {
-  .path-frontpage .masthead {
-    top: 52px;
-  }
 }
 @media (min-width: 0) and (max-width: 47.9375em) {
   .path-frontpage .masthead {
