--- a/openy_lily/sass/misc/_frontpage.scss
+++ b/openy_lily/sass/misc/_frontpage.scss
@@ -2,11 +2,6 @@
   #block-tabs {
     margin-top: 60px;
   }
-  #banner {
-    @include breakpoint ($tablet-start) {
-      margin-top: -62px;
-    }
-  }
   .masthead {
     position: relative;
     z-index: 99;
@@ -14,8 +9,7 @@
     @include transition(top 0.2s ease);
     background: #0060af;
     @include breakpoint (0 $tablet-start) {
-      top: 52px;
-    }
+     }
     @include breakpoint (0 767px) {
       padding: 0 0 10px;
       min-height: 128px;
